fix for cropped image

--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ body {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  object-position: top center; 
   border-radius: calc(var(--radius) - 4px);
   margin-bottom: 0.6rem;
 }
